Fix navbar/title z-index (final)

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -3,7 +3,6 @@ nav {
     left: 0;
     top: 0;
     z-index: 99;
-    -webkit-transform: translate3d(0,0,0);
 }
 
 .navbar {
@@ -42,6 +41,7 @@ nav {
     position: absolute;
     top: 100%;
     width: 100%;
+    z-index: 99;
 
     & > a {
         display: block;
